fixed footer alignment

--- a/code/alumni-front/src/components/Login/Login.css
+++ b/code/alumni-front/src/components/Login/Login.css
@@ -6,8 +6,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  height: 100%;
   position: relative;
+  margin: auto;
 }
 
 .Login > div {
