--- a/code/alumni-front/src/components/Root/Root.scss
+++ b/code/alumni-front/src/components/Root/Root.scss
@@ -1,8 +1,7 @@
 .App {
   width: 100%;
+  min-height: 100vh;
   position: relative;
-  height: 100%;
-  overflow: auto;
   display: flex;
   box-sizing: border-box;
   flex-direction: column;
