--- a/code/alumni-front/src/index.css
+++ b/code/alumni-front/src/index.css
@@ -1,10 +1,16 @@
+html {
+  height: 100%;
+}
 body {
+  position: relative;
   margin: 0;
   width: 100%;
-  height: 100vh;
+  min-height: 100%;
 }
 
 #root {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
 }
